# nv

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  doppler.yaml  package.json  pnpm-lock.yaml  turbo.json
.beads/: bd.sock.startlock  issues.jsonl
.claude/: audit-bootstrap-manifest.json  settings.json  settings.local.json  wave-plan.json
.claude/audit/: personas.json
.claude/audit/contexts/: cleanup-dead-code.md  fix-agent-cold-start.md  fix-channel-safety.md  fix-dashboard-contracts.md  fix-infra-health.md  fix-nexus-stability.md  fix-tools-registry.md  fix-watcher-reliability.md  wire-digest-pipeline.md
.claude/audit/memory/: agent-memory.md  audit-summary-2026-03-23.md  channels-memory.md  dashboard-memory.md  digest-memory.md  infra-memory.md  nexus-memory.md  tools-memory.md  watchers-memory.md
.claude/commands/: audit-agent.md  audit-all.md  audit-channels.md  audit-dashboard.md  audit-diff.md  audit-digest.md  audit-infra.md  audit-nexus.md  audit-tools.md  audit-watchers.md  audit-waves.md
.nova/memory/: decisions.md  org-map.md  people.md  projects.md  tasks.md  user.md
apps/dashboard/: .gitignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  server.ts  tailwind.config.ts
apps/dashboard/app/: HomeClient.tsx  globals.css  layout.tsx  page.tsx
apps/dashboard/components/: ActiveSession.tsx  ActivityFeed.tsx  AppShell.tsx  CCSessionPanel.tsx  ChannelRow.tsx  ColdStartsPanel.tsx  ConfigureModal.tsx  ContactCard.tsx  ContactDetailPanel.tsx  CreateProjectDialog.tsx  DiaryEntry.tsx  IntegrationCard.tsx  LatencyChart.tsx  LeoBadge.tsx  MemoryPreview.tsx  MiniChart.tsx  NovaBadge.tsx  ObligationItem.tsx  ObligationSummaryBar.tsx  ProjectAccordion.tsx  ProjectCard.tsx  ProjectCategoryTree.tsx  ProjectDetailPanel.tsx  (+9 more)
config/: bootstrap.md  env.example  identity.md  nv.example.toml  nv.toml  soul.md  system-prompt.md  user.md
config/contact/: example-contact.md
crates/ado-cli/: Cargo.toml
crates/nv-cli/: Cargo.toml
crates/nv-cli/src/: main.rs
crates/nv-cli/src/commands/: check.rs  status.rs
crates/nv-core/: Cargo.toml
crates/nv-core/src/: channel.rs  config.rs  lib.rs  tool.rs  types.rs
crates/nv-daemon/: Cargo.toml  build.rs
crates/nv-daemon/src/: account.rs  agent.rs  aggregation.rs  alert_rules.rs  anthropic.rs  bash.rs  briefing_store.rs  calendar_tools.rs  callbacks.rs  cc_sessions.rs  claude.rs  cloudflare_tools.rs  cold_start_store.rs  contact_store.rs  conversation.rs  dashboard.rs  dashboard_client.rs  diary.rs  docker_tools.rs  doppler_tools.rs  error_recovery.rs  github.rs  health.rs  health_poller.rs  http.rs  lib.rs  main.rs  memory.rs  messages.rs  neon_tools.rs  obligation_detector.rs  obligation_executor.rs  obligation_research.rs  obligation_store.rs  orchestrator.rs  persona.rs  pg_contact_store.rs  pg_obligation_store.rs  pg_pool.rs  pg_session_events.rs  (+20 more)
crates/nv-daemon/src/channels/: mod.rs  util.rs
crates/nv-daemon/src/channels/discord/: client.rs  gateway.rs  mod.rs  types.rs
crates/nv-daemon/src/channels/email/: client.rs  mod.rs
crates/nv-daemon/src/channels/imessage/: mod.rs
crates/nv-daemon/src/channels/teams/: client.rs  mod.rs  oauth.rs  types.rs
crates/nv-daemon/src/channels/telegram/: callbacks.rs  client.rs  mod.rs  types.rs
crates/nv-daemon/src/digest/: actions.rs  format.rs  gather.rs  mod.rs  state.rs  synthesize.rs
crates/nv-daemon/src/discord/: client.rs  gateway.rs  types.rs
crates/nv-daemon/src/email/: client.rs  html.rs  mod.rs  types.rs
crates/nv-daemon/src/imessage/: client.rs  mod.rs  types.rs
crates/nv-daemon/src/jira/: client.rs  mod.rs  registry.rs  tools.rs  types.rs
crates/nv-daemon/src/nexus/: backend.rs  client.rs  connection.rs  mod.rs  notify.rs  progress.rs  stream.rs  tools.rs  watchdog.rs
crates/nv-daemon/src/query/: followup.rs  format.rs  gather.rs  mod.rs  synthesize.rs
crates/nv-daemon/src/team_agent/: dispatcher.rs  mod.rs  session.rs  types.rs
crates/nv-daemon/src/teams/: types.rs
crates/nv-daemon/src/telegram/: client.rs  mod.rs  types.rs
crates/nv-daemon/src/tools/: ado.rs  calendar.rs  channels.rs  check.rs  checkable_impls.rs  cloudflare.rs  cloudpc.rs  discord.rs  docker.rs  doppler.rs  github.rs  ha.rs  mod.rs  neon.rs  outlook.rs  plaid.rs  posthog.rs  resend.rs  schedule.rs  sentry.rs  stripe.rs  teams.rs  upstash.rs  vercel.rs  web.rs
crates/nv-daemon/src/tools/jira/: client.rs  mod.rs  registry.rs  tools.rs  webhooks.rs
crates/nv-daemon/src/watchers/: deploy_watcher.rs  ha_watcher.rs  mod.rs  sentry_watcher.rs  stale_ticket_watcher.rs
crates/nv-daemon/tests/: jira_integration_tests.rs  jira_mock_tests.rs
crates/nv-tools/: Cargo.toml
crates/nv-tools/src/: dispatch.rs  lib.rs  main.rs  registry.rs  server.rs  shared.rs
crates/nv-tools/src/tools/: ado.rs  calendar.rs  cloudflare.rs  docker.rs  doppler.rs  github.rs  ha.rs  mod.rs  neon.rs  outlook.rs  plaid.rs  posthog.rs  resend.rs  sentry.rs  stripe.rs  upstash.rs  vercel.rs  web.rs
crates/nv-tools/tests/: smoke.rs
dashboard/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts
dashboard/src/: App.tsx  index.css
deploy/: install-tools.sh  install-ts.sh  install.sh  nova-azure-svc.service  nova-channels-svc.service  nova-discord-svc.service  nova-graph-svc.service  nova-memory-svc.service  nova-messages-svc.service  nova-meta-svc.service  nova-schedule-svc.service  nova-teams-svc.service  nova-tool-router.service  nova-tools.target  nova-ts.service  nv.service  pre-push.sh
docs/: integration-architecture.mmd  svgl-skill-review.html
docs/diagrams/: claude-code-instances.mmd  geist-dashboard-design-reference.html  nova-lifecycle.mmd  nova-token-flow.mmd  ux-inventory.html
docs/plan/: context.md  nova-v11-research.md  wave-plan.json
memory/: org-map.md  people.md
proto/: nexus.proto
relays/discord/: bot.py  nv-discord-relay.service
relays/teams/: nv-teams-relay.service  server.py
scripts/: agent-sidecar.py  nova-tools-mcp.py  register-mcp-servers.sh
(+1144 files in other folders)
