[workspace]
resolver = "2"
members = ["crates/nv-core", "crates/nv-daemon", "crates/nv-cli"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
axum = "0.8"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tracing-appender = "0.2"
sd-notify = "0.4"
tokio-util = "0.7"
