[workspace]
resolver = "2"
members = ["crates/nv-core", "crates/nv-daemon", "crates/nv-cli", "crates/nv-tools"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
axum = "0.8"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tracing-appender = "0.2"
sd-notify = "0.4"
tokio-util = "0.7"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = { version = "1.2" }
libc = "0.2"
rust-embed = { version = "8", features = ["axum-ex"] }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
rustls = "0.23"
webpki-roots = "0.26"
