[package]
name = "nv-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
nv-core = { path = "../nv-core" }
nv-tools = { path = "../nv-tools" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
sha2 = "0.10"
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing-appender = { workspace = true }
tokio-util = { workspace = true }
sd-notify = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
libc = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tokio-postgres = { workspace = true }
tokio-postgres-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
toml = { workspace = true }
cron = "0.12"

[build-dependencies]
tonic-build = "0.12"

[features]
integration = []

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
