[package]
name = "nv-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nv-tools"
path = "src/main.rs"

[lib]
name = "nv_tools"
path = "src/lib.rs"

[dependencies]
nv-core = { path = "../nv-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
